<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc_desc" />

        <EditText
            android:id="@+id/imc_weight"
            style="@style/EditTextForm"
            android:hint="@string/weight"
            android:maxLength="3"
            android:autofillHints="@string/weight" />

        <EditText
            android:id="@+id/imc_heigt"
            style="@style/EditTextForm"
            android:hint="@string/height"
            android:maxLength="3"
            android:autofillHints=""@string/height" />

        <Button
            android:id="@+id/imc_send"
            style="@style/ButtonForm"
            android:text="@string/calc" />

    </LinearLayout>
</ScrollView>